--- a/admin.html
+++ b/admin.html
@@ -1,193 +1,202 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admin Panel - ScanDrink</title>
-  <style>
-    :root {
-      --primary: #0078d7;
-      --primary-dark: #005fa3;
-      --danger: #dc3545;
-      --bg: #f2f6fc;
-      --success: #28a745;
-    }
-    body {
-      font-family: "Poppins", sans-serif;
-      background-color: var(--bg);
-      margin: 0;
-      padding: 0;
-      color: #333;
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .container {
-      width: 95%;
-      max-width: 1000px;
-      background: #fff;
-      border-radius: 16px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-      overflow: hidden;
-      animation: fadeIn 0.5s ease-in-out;
-    }
-    @keyframes fadeIn {
-      from {opacity: 0; transform: translateY(20px);}
-      to {opacity: 1; transform: translateY(0);}
-    }
-    header {
-      background-color: var(--primary);
-      color: white;
-      padding: 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-    }
-    header h2 { margin: 0; font-weight: 600; font-size: 1.4rem; }
-    .logout-btn {
-      background-color: var(--danger);
-      color: white;
-      border: none;
-      padding: 8px 14px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 14px;
-      transition: background 0.3s;
-    }
-    .logout-btn:hover { background-color: #b02a37; }
-    .stats {
-      display: flex;
-      justify-content: space-around;
-      background: #f9fbff;
-      padding: 20px 10px;
-      flex-wrap: wrap;
-    }
-    .stat-box {
-      background: white;
-      border: 1px solid #e0e0e0;
-      border-radius: 10px;
-      padding: 15px 25px;
-      margin: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-      min-width: 130px;
-      text-align: center;
-    }
-    .stat-box h3 { margin: 5px 0; color: var(--primary); font-size: 20px; }
-    .stat-box p { margin: 0; color: #666; }
-    .filters { text-align: center; padding: 10px; }
-    .filters input { padding: 8px; border-radius: 6px; border: 1px solid #ccc; width: 200px; margin-right: 10px; }
-    .filters select { padding: 8px; border-radius: 6px; border: 1px solid #ccc; }
-    .content { padding: 20px; overflow-x: auto; }
-    table { width: 100%; border-collapse: collapse; min-width: 700px; }
-    th, td { padding: 12px 10px; border-bottom: 1px solid #e0e0e0; text-align: left; }
-    th { background-color: var(--primary); color: white; position: sticky; top: 0; z-index: 1; }
-    tr:hover td { background-color: #f9fbff; }
-    .login-container {
-      width: 90%;
-      max-width: 400px;
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-      padding: 40px 30px;
-      text-align: center;
-      animation: fadeIn 0.6s ease-in-out;
-    }
-    .login-container h2 { color: var(--primary); margin-bottom: 25px; }
-    input { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ccc; border-radius: 8px; font-size: 15px; }
-    button {
-      background-color: var(--primary);
-      color: white;
-      border: none;
-      padding: 12px 18px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 15px;
-      transition: background 0.3s;
-    }
-    button:hover { background-color: var(--primary-dark); }
-    #login-error { color: red; margin-top: 10px; display: none; }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Admin Panel - ScanDrink</title>
+<style>
+:root {
+  --primary: #0078d7;
+  --primary-dark: #005fa3;
+  --danger: #dc3545;
+  --bg: #f2f6fc;
+  --success: #28a745;
+}
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: var(--bg);
+  margin: 0;
+  padding: 0;
+  color: #333;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container {
+  width: 95%;
+  max-width: 1000px;
+  background: #fff;
+  border-radius: 16px;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+  overflow: hidden;
+  animation: fadeIn 0.5s ease-in-out;
+}
+@keyframes fadeIn {
+  from {opacity: 0; transform: translateY(20px);}
+  to {opacity: 1; transform: translateY(0);}
+}
+header {
+  background-color: var(--primary);
+  color: white;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+header h2 { margin: 0; font-weight: 600; font-size: 1.4rem; }
+.logout-btn {
+  background-color: var(--danger);
+  color: white;
+  border: none;
+  padding: 8px 14px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: background 0.3s;
+}
+.logout-btn:hover { background-color: #b02a37; }
+.stats {
+  display: flex;
+  justify-content: space-around;
+  background: #f9fbff;
+  padding: 20px 10px;
+  flex-wrap: wrap;
+}
+.stat-box {
+  background: white;
+  border: 1px solid #e0e0e0;
+  border-radius: 10px;
+  padding: 15px 25px;
+  margin: 8px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+  min-width: 130px;
+  text-align: center;
+}
+.stat-box h3 { margin: 5px 0; color: var(--primary); font-size: 20px; }
+.stat-box p { margin: 0; color: #666; }
+.filters { text-align: center; padding: 10px; }
+.filters input { padding: 8px; border-radius: 6px; border: 1px solid #ccc; width: 200px; margin-right: 10px; }
+.filters select { padding: 8px; border-radius: 6px; border: 1px solid #ccc; }
+.content { padding: 20px; overflow-x: auto; }
+table { width: 100%; border-collapse: collapse; min-width: 700px; }
+th, td { padding: 12px 10px; border-bottom: 1px solid #e0e0e0; text-align: left; }
+th { background-color: var(--primary); color: white; position: sticky; top: 0; z-index: 1; }
+tr:hover td { background-color: #f9fbff; }
+.login-container {
+  width: 90%;
+  max-width: 400px;
+  background: white;
+  border-radius: 12px;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+  padding: 40px 30px;
+  text-align: center;
+  animation: fadeIn 0.6s ease-in-out;
+}
+.login-container h2 { color: var(--primary); margin-bottom: 25px; }
+input { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ccc; border-radius: 8px; font-size: 15px; }
+button {
+  background-color: var(--primary);
+  color: white;
+  border: none;
+  padding: 12px 18px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 15px;
+  transition: background 0.3s;
+}
+button:hover { background-color: var(--primary-dark); }
+#login-error { color: red; margin-top: 10px; display: none; }
 
-    /* WARNA STATUS */
-    .status-success { color: #28a745; font-weight: bold; }
-    .status-pending { color: #ffc107; font-weight: bold; }
-    .status-failed { color: #dc3545; font-weight: bold; }
+/* WARNA STATUS */
+.status-success { color: #28a745; font-weight: bold; }
+.status-pending { color: #ffc107; font-weight: bold; }
+.status-failed { color: #dc3545; font-weight: bold; }
 
-    @media (max-width: 768px) {
-      header h2 { font-size: 1.1rem; }
-      .filters { display: flex; flex-direction: column; gap: 8px; }
-      .filters input, .filters select { width: 100%; margin: 0; }
-      th, td { font-size: 13px; }
-    }
-  </style>
+/* HIGHLIGHT PERUBAHAN STATUS */
+.highlight { animation: highlightAnim 2s ease; }
+@keyframes highlightAnim {
+  0% { background-color: #fff3cd; }
+  50% { background-color: #fff3cd; }
+  100% { background-color: transparent; }
+}
+
+@media (max-width: 768px) {
+  header h2 { font-size: 1.1rem; }
+  .filters { display: flex; flex-direction: column; gap: 8px; }
+  .filters input, .filters select { width: 100%; margin: 0; }
+  th, td { font-size: 13px; }
+}
+</style>
 </head>
 <body>
 
-  <!-- LOGIN PAGE -->
-  <div class="login-container" id="login-page">
-    <h2>Login Admin</h2>
-    <input type="text" id="username" placeholder="Username" /><br />
-    <input type="password" id="password" placeholder="Password" /><br />
-    <button onclick="login()">Login</button>
-    <p id="login-error">Username atau password salah!</p>
-  </div>
+<!-- LOGIN PAGE -->
+<div class="login-container" id="login-page">
+  <h2>Login Admin</h2>
+  <input type="text" id="username" placeholder="Username" /><br />
+  <input type="password" id="password" placeholder="Password" /><br />
+  <button onclick="login()">Login</button>
+  <p id="login-error">Username atau password salah!</p>
+</div>
 
-  <!-- ADMIN PAGE -->
-  <div class="container" id="admin-page" style="display:none;">
-    <header>
-      <h2>📊 Panel Transaksi ScanDrink</h2>
-      <button class="logout-btn" onclick="logout()">Logout</button>
-    </header>
+<!-- ADMIN PAGE -->
+<div class="container" id="admin-page" style="display:none;">
+  <header>
+    <h2>📊 Panel Transaksi ScanDrink</h2>
+    <button class="logout-btn" onclick="logout()">Logout</button>
+  </header>
 
-    <div class="stats">
-      <div class="stat-box">
-        <h3 id="totalTransaksi">0</h3>
-        <p>Total Transaksi</p>
-      </div>
-      <div class="stat-box">
-        <h3 id="totalHariIni">Rp 0</h3>
-        <p>Pendapatan Hari Ini</p>
-      </div>
-      <div class="stat-box">
-        <h3 id="pendingCount">0</h3>
-        <p>Menunggu Pembayaran</p>
-      </div>
+  <div class="stats">
+    <div class="stat-box">
+      <h3 id="totalTransaksi">0</h3>
+      <p>Total Transaksi</p>
     </div>
-
-    <div class="filters">
-      <input type="text" id="search" placeholder="Cari Order ID / Menu / Status..." onkeyup="filterTable()" />
-      <select id="dateFilter" onchange="applyDateFilter()">
-        <option value="all">Semua</option>
-        <option value="today">Hari ini</option>
-        <option value="yesterday">Kemarin</option>
-        <option value="week">Minggu ini</option>
-      </select>
+    <div class="stat-box">
+      <h3 id="totalHariIni">Rp 0</h3>
+      <p>Pendapatan Hari Ini</p>
     </div>
-
-    <div class="content">
-      <table id="transactions-table">
-        <thead>
-          <tr>
-            <th>Order ID</th>
-            <th>Menu</th>
-            <th>Harga</th>
-            <th>Status</th>
-            <th>Tanggal</th>
-          </tr>
-        </thead>
-        <tbody id="transactions-body">
-          <tr><td colspan="5">Memuat data...</td></tr>
-        </tbody>
-      </table>
+    <div class="stat-box">
+      <h3 id="pendingCount">0</h3>
+      <p>Menunggu Pembayaran</p>
     </div>
   </div>
+
+  <div class="filters">
+    <input type="text" id="search" placeholder="Cari Order ID / Menu / Status..." onkeyup="filterTransactions()" />
+    <select id="dateFilter" onchange="filterTransactions()">
+      <option value="all">Semua</option>
+      <option value="today">Hari ini</option>
+      <option value="yesterday">Kemarin</option>
+      <option value="week">Minggu ini</option>
+    </select>
+  </div>
+
+  <div class="content">
+    <table id="transactions-table">
+      <thead>
+        <tr>
+          <th>Order ID</th>
+          <th>Menu</th>
+          <th>Harga</th>
+          <th>Status</th>
+          <th>Tanggal</th>
+        </tr>
+      </thead>
+      <tbody id="transactions-body">
+        <tr><td colspan="5">Memuat data...</td></tr>
+      </tbody>
+    </table>
+  </div>
+</div>
 
 <script>
 const BACKEND_URL = "https://scandrink.my.id";
 const USERNAME = "admin";
 const PASSWORD = "123";
-let transactionsData = {}; // key: order_id, value: transaksi
+let transactionsData = []; // semua data transaksi
+let previousStatusMap = {}; // simpan status sebelumnya
 
 function login() {
   const user = document.getElementById("username").value.trim();
@@ -208,54 +217,86 @@ function logout() {
 function showAdminPage() {
   document.getElementById("login-page").style.display = "none";
   document.getElementById("admin-page").style.display = "block";
-  loadTransactions(true);
+  loadTransactions();
 
   // 🔄 Auto-update setiap 2 detik
-  setInterval(() => loadTransactions(false), 2000);
+  setInterval(loadTransactions, 2000);
 }
 
-// Jika fullLoad=true, render seluruh tabel, kalau false hanya update transaksi baru/status berubah
-async function loadTransactions(fullLoad = false) {
+async function loadTransactions() {
   try {
     const res = await fetch(`${BACKEND_URL}/transactions?admin_token=haiiniadmintoken123`);
     if (!res.ok) throw new Error("Gagal ambil data");
     const data = await res.json();
-
-    let updated = false;
-
-    data.forEach(tx => {
-      const existing = transactionsData[tx.order_id];
-      if (!existing || existing.status !== tx.status) {
-        transactionsData[tx.order_id] = tx;
-        updated = true;
-      }
-    });
-
-    if (fullLoad || updated) {
-      renderTable(Object.values(transactionsData));
-      updateStats(Object.values(transactionsData));
-    }
+    transactionsData = data;
+    applyFiltersAndRender();
   } catch (err) {
     console.error(err);
   }
 }
 
+// Gabungkan search + date filter
+function applyFiltersAndRender() {
+  const searchValue = document.getElementById("search").value.toLowerCase();
+  const dateFilter = document.getElementById("dateFilter").value;
+  const now = new Date();
+  const startOfDay = new Date(now.getFullYear(), now.getMonth(), now.getDate());
+
+  const filteredData = transactionsData.filter(tx => {
+    const matchesSearch =
+      tx.order_id.toLowerCase().includes(searchValue) ||
+      tx.item_name.toLowerCase().includes(searchValue) ||
+      tx.status.toLowerCase().includes(searchValue);
+
+    let matchesDate = true;
+    const txDate = new Date(tx.created_at);
+    if (dateFilter === "today") matchesDate = txDate >= startOfDay;
+    else if (dateFilter === "yesterday") {
+      const yesterdayStart = new Date(startOfDay);
+      yesterdayStart.setDate(yesterdayStart.getDate() - 1);
+      const yesterdayEnd = new Date(startOfDay);
+      matchesDate = txDate >= yesterdayStart && txDate < yesterdayEnd;
+    } else if (dateFilter === "week") {
+      const weekStart = new Date(startOfDay);
+      weekStart.setDate(weekStart.getDate() - 7);
+      matchesDate = txDate >= weekStart;
+    }
+
+    return matchesSearch && matchesDate;
+  });
+
+  renderTable(filteredData);
+  updateStats(filteredData);
+}
+
+function filterTransactions() {
+  applyFiltersAndRender();
+}
+
 function renderTable(data) {
   const tbody = document.getElementById("transactions-body");
-  if (data.length === 0) {
+  if (!data.length) {
     tbody.innerHTML = `<tr><td colspan="5">Tidak ada transaksi ditemukan</td></tr>`;
     return;
   }
 
-  tbody.innerHTML = data.map(tx => {
-    let statusClass = "";
+  // Urut terbaru di atas
+  const sorted = data.slice().sort((a, b) => new Date(b.created_at) - new Date(a.created_at));
+
+  tbody.innerHTML = sorted.map(tx => {
     const statusLower = (tx.status || "").toLowerCase();
+    let statusClass = "";
     if (statusLower === "success") statusClass = "status-success";
     else if (statusLower === "pending") statusClass = "status-pending";
     else if (statusLower === "failed") statusClass = "status-failed";
 
+    // Highlight jika status berubah
+    const prevStatus = previousStatusMap[tx.order_id];
+    const highlightClass = (prevStatus && prevStatus !== statusLower) ? "highlight" : "";
+    previousStatusMap[tx.order_id] = statusLower;
+
     return `
-      <tr id="row-${tx.order_id}">
+      <tr class="${highlightClass}">
         <td>${tx.order_id}</td>
         <td>${tx.item_name}</td>
         <td>Rp ${Number(tx.price).toLocaleString('id-ID')}</td>
@@ -271,12 +312,9 @@ function updateStats(data) {
   const startOfDay = new Date(today.getFullYear(), today.getMonth(), today.getDate());
 
   const successfulTransactions = data.filter(tx => (tx.status || "").toLowerCase() === "success");
-
   const totalTransaksi = successfulTransactions.length;
-
   const todayTransactions = successfulTransactions.filter(tx => new Date(tx.created_at) >= startOfDay);
   const totalHariIni = todayTransactions.reduce((sum, tx) => sum + Number(tx.price || 0), 0);
-
   const pendingCount = data.filter(tx => (tx.status || "").toLowerCase() === "pending").length;
 
   document.getElementById("totalTransaksi").textContent = totalTransaksi;
@@ -284,10 +322,10 @@ function updateStats(data) {
   document.getElementById("pendingCount").textContent = pendingCount;
 }
 
+// Jika sudah login sebelumnya
 if (localStorage.getItem("admin_logged_in") === "true") {
   showAdminPage();
 }
 </script>
-
 </body>
 </html>
