--- a/admin.html
+++ b/admin.html
@@ -114,9 +114,8 @@ button:hover { background-color: var(--primary-dark); }
 .status-pending { color: #ffc107; font-weight: bold; }
 .status-failed { color: #dc3545; font-weight: bold; }
 
-/* HIGHLIGHT STATUS CHANGE */
+/* HIGHLIGHT STATUS CHANGE / NEW */
 .highlight { animation: highlightAnim 2s ease; background-color: #fff3cd; }
-
 @keyframes highlightAnim {
   0% { background-color: #fff3cd; }
   100% { background-color: transparent; }
@@ -132,7 +131,6 @@ button:hover { background-color: var(--primary-dark); }
 </head>
 <body>
 
-<!-- LOGIN PAGE -->
 <div class="login-container" id="login-page">
   <h2>Login Admin</h2>
   <input type="text" id="username" placeholder="Username" /><br />
@@ -141,7 +139,6 @@ button:hover { background-color: var(--primary-dark); }
   <p id="login-error">Username atau password salah!</p>
 </div>
 
-<!-- ADMIN PAGE -->
 <div class="container" id="admin-page" style="display:none;">
   <header>
     <h2>📊 Panel Transaksi ScanDrink</h2>
@@ -198,7 +195,8 @@ const PASSWORD = "123";
 
 let transactionsData = [];
 let filteredData = [];
-let previousStatusMap = {}; // untuk highlight status berubah
+let previousStatusMap = {};
+let knownOrderIds = new Set();
 
 function login() {
   const user = document.getElementById("username").value.trim();
@@ -235,7 +233,6 @@ async function loadTransactions() {
   }
 }
 
-// Gabungkan search + date filter
 function applyFiltersAndRender() {
   const searchValue = document.getElementById("search").value.toLowerCase();
   const dateFilter = document.getElementById("dateFilter").value;
@@ -282,7 +279,6 @@ function renderTable(data) {
   }
 
   const sorted = data.slice().sort((a, b) => new Date(b.created_at) - new Date(a.created_at));
-
   let html = '';
   let scrollToRowId = null;
 
@@ -295,10 +291,16 @@ function renderTable(data) {
 
     const prevStatus = previousStatusMap[tx.order_id];
     let highlightClass = '';
-    if (prevStatus && prevStatus !== statusLower) {
-      highlightClass = 'highlight';
-      scrollToRowId = tx.order_id; // scroll ke row ini
+
+    if (!knownOrderIds.has(tx.order_id)) {
+      highlightClass = 'highlight'; // transaksi baru
+      scrollToRowId = tx.order_id;
+      knownOrderIds.add(tx.order_id);
+    } else if (prevStatus && prevStatus !== statusLower) {
+      highlightClass = 'highlight'; // status berubah
+      scrollToRowId = tx.order_id;
     }
+
     previousStatusMap[tx.order_id] = statusLower;
 
     html += `
@@ -314,7 +316,6 @@ function renderTable(data) {
 
   tbody.innerHTML = html;
 
-  // Scroll otomatis ke transaksi terakhir yang berubah status
   if (scrollToRowId) {
     const rowEl = document.getElementById(`row-${scrollToRowId}`);
     if (rowEl) rowEl.scrollIntoView({ behavior: 'smooth', block: 'center' });
@@ -336,7 +337,7 @@ function updateStats(data) {
   document.getElementById("pendingCount").textContent = pendingCount;
 }
 
-// Jika sudah login sebelumnya
+// Login otomatis jika sebelumnya sudah login
 if (localStorage.getItem("admin_logged_in") === "true") {
   showAdminPage();
 }
