--- a/admin.html
+++ b/admin.html
@@ -141,7 +141,7 @@ button:hover { background-color: var(--primary-dark); }
 
 <div class="container" id="admin-page" style="display:none;">
   <header>
-    <h2>📊 Panel Transaksi ScanDrink</h2>
+    <h2>📊 Panel Transaksi ScanDRINK</h2>
     <button class="logout-btn" onclick="logout()">Logout</button>
   </header>
 
